# PassQ

./: .env.example  .gitignore  README.md  cookies.txt  docker-compose.production.yml  docker-compose.yml  export_response3.txt  test_csv_import.csv  test_import.json
backend/: .env  .env.example  Cargo.toml  Dockerfile  README.md  schema.rs
backend/migrations/: _000001_create_tables.down.sql
backend/migrations/000001_create_tables/: up.sql
backend/migrations/000002_add_user_id_to_passwords/: down.sql  up.sql
backend/migrations/000003_add_password_fields/: down.sql  up.sql
backend/migrations/000004_update_shares_table/: down.sql  up.sql
backend/migrations/2024-01-15-000000_create_audit_logs/: up.sql
backend/migrations/2024-01-20-000000_create_login_history/: down.sql  up.sql
backend/migrations/2025-01-27-000000_encrypt_metadata/: down.sql  up.sql
backend/migrations/2025-01-27-000001_create_session_tables/: down.sql  up.sql
backend/migrations/2025-01-28-000000_create_oauth_accounts/: down.sql  up.sql
backend/migrations/2025-08-24-180709_add_password_reset_tokens/: down.sql  up.sql
backend/migrations/2025-08-24-190000_add_email_to_users/: down.sql  up.sql
backend/src/: audit.rs  auth.rs  crypto.rs  db.rs  email.rs  enhanced_auth_handlers.rs  enterprise_session_manager.rs  ip_controls.rs  key_management.rs  main.rs  mfa.rs  models.rs  oauth.rs  schema.rs  sso_auth.rs  token_management.rs  zero_knowledge.rs
chrome-extension/: background.js  content.css  content.js  crypto.js  dom-sanitizer.js  manifest.json  offline-cache.js  popup.css  popup.html  (+4 more)
(+67 files in other folders)
