[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "serde_json", "chrono"] }
dotenv = "0.15"
jsonwebtoken = "9" # latest API
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15"
r2d2 = "0.8"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17"
totp-rs = { version = "5.7", features = ["gen_secret", "otpauth"] }
regex = "1"
log = "0.4"
env_logger = "0.10"
actix-governor = "0.5"
tokio = { version = "1", features = ["full"] }
actix-web-httpauth = "0.8"
futures-util = "0.3"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
ipnetwork = "0.20"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"] }
oauth2 = "4.4"
url = "2.4"
base64 = "0.21"